--- a/lab01_1/app/src/main/res/layout/activity_main.xml
+++ b/lab01_1/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         android:text="@string/test"
         android:id="@+id/btn_test"
-        android:layout_marginRight="@dimen/margin_base"
+        android:layout_marginEnd="@dimen/margin_base"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 </RelativeLayout>
