--- a/lab01_2a/app/src/main/res/values/dimens.xml
+++ b/lab01_2a/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="textSize">15pt</dimen>
     <dimen name="padding">3dip</dimen>
+    <dimen name="margin_start">10dip</dimen>
 </resources>
